--- a/templates/forum/all_forums.html
+++ b/templates/forum/all_forums.html
@@ -31,69 +31,27 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'forum:all_forums' %}">Forum</a>
             </li>
-            <!-- if request.user.is_authenticated -->
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'account:profile' user_id=1 %}">Profile</a>
-            </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'invest:itemshop' %}">Item Shop</a>
             </li>
+            {% if request.user.is_authenticated %}
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'invest:invest' %}">Invest</a>
             </li>
-            <!-- endif -->
+            {% endif %}
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'about' %}">About Us</a>
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-                <div class="btn-group">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Signup
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right p-3">
-                        <div class="my-3">
-                            <h3>Sign Up</h3>
-                        </div>
-                        <form action="" style="width: 300px;">
-                            <div class="form-group">
-                                <input type="text" class="form-control" name="username" id="username" placeholder="username">
-                            </div>
-                            <div class="form-group">
-                                <input type="password" class="form-control" name="password" id="password" placeholder="password">
-                            </div>
-                            <div class="form-group">
-                                <input type="password" class="form-control" name="confirm_password" id="confirm_password" placeholder="verify password">
-                            </div>
-                            <div class="form-group">
-                                <button class="btn btn-dark float-right">Sign Up</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Login
-                </a>
-                <div class="dropdown-menu dropdown-menu-right p-3">
-                    <div class="my-3">
-                        <h3>Login</h3>
-                    </div>
-                    <form action="" style="width: 300px;">
-                        <div class="form-group">
-                            <input type="text" class="form-control" name="username" id="username" placeholder="username">
-                        </div>
-                        <div class="form-group">
-                            <input type="password" class="form-control" name="password" id="password" placeholder="password">
-                        </div>
-                        <div class="form-group">
-                            <button class="btn btn-dark float-right">Login</button>
-                        </div>
-                    </form>
-                </div>
-            </li>
+            {% if request.user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'account:myprofile' %}">Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'account:logout' %}">Log out</a>
+                </li>
+            {% endif %}
         </ul>
     </div>
 </nav>
@@ -102,38 +60,61 @@
         <div class="col-lg-12 d-flex justify-content-center align-items-center mb-3">
         </div>
     </div>
-
     <div class="row">
         <div class="col-lg-12">
             <table class="table">
                 <thead>
                 <tr>
-                    <td>No</td>
-                    <td>Cost(Pts)</td>
+                    <td>Posted At</td>
+                    <td>Poster</td>
                     <td>Title</td>
-                    <td>Img</td>
+                    <td>Reply</td>
                 </tr>
                 </thead>
+                {% for forum in forums %}
                 <tbody>
                 <tr>
-                    <td>1</td>
-                    <td>Kentang</td>
-                    <td>10000</td>
+                    <td>{{ forum.time }}</td>
+                    <td>{{ forum.poster }}</td>
+                    <td><a href="{% url 'forum:forum' forum_id=forum.pk %}">{{ forum.title }}</a></td>
                     <td>
-                        <button class="btn btn-primary"><i class="fas fa-reply"></i></button>
-                        <button class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
+                        <a href="{% url 'forum:forum' forum_id=forum.pk %}"><button class="btn btn-primary"><i class="fas fa-reply"></i></button></a>
+                        {% ifequal request.user.pk forum.poster_id %}
+                        <a href="{% url 'forum:delete_forum' forum_id=forum.pk %}"><button class="btn btn-danger"><i class="fas fa-trash-alt"></i></button></a>
+                        {% endifequal %}
                     </td>
                 </tr>
                 </tbody>
+                {% endfor %}
             </table>
         </div>
     </div>
 
     <div class="row">
         <div class="col-lg-12 text-right">
-            <button class="btn btn-primary">Create Thread</button>
+            {% if request.user.is_authenticated %}
+            <a href="{% url 'forum:post' %}"><button class="btn btn-primary">Create Thread</button></a>
+            {% endif %}
         </div>
     </div>
+
+    {% if forums.has_previous %}
+    <a href="?page={{ forums.previous_page_number }}">Previous</a>
+    {% endif %}
+
+    {% if forums.has_previous or forums.has_next %}
+    {% for i in page_range %}
+    {% ifequal i current_page %}
+        {{ i }}
+    {% else %}
+        <a href="?page={{ i }}">{{ i }}</a>
+    {% endifequal %}
+    {% endfor %}
+    {% endif %}
+
+    {% if forums.has_next %}
+    <a href="?page={{ forums.next_page_number }}" class="next">Next</a>
+    {% endif %}
 
 </div>
 <!-- Footer -->
@@ -150,32 +131,5 @@
         </div>
     </div>
 </div>
-Here is a page where all of the forum posts will go.<br/><br/>
-
-{% for forum in forums %}
-Title: <a href="{% url 'forum:forum' forum_id=forum.pk %}">{{ forum.title }}</a><br/>
-Poster: {{ forum.poster }}<br/>
-Posted at: {{ forum.time }}<br/><br/>
-{% endfor %}
-
-
-
-{% if forums.has_previous %}
-<a href="?page={{ forums.previous_page_number }}">Previous</a>
-{% endif %}
-
-{% if forums.has_previous or forums.has_next %}
-{% for i in page_range %}
-{% ifequal i current_page %}
-    {{ i }}
-{% else %}
-    <a href="?page={{ i }}">{{ i }}</a>
-{% endifequal %}
-{% endfor %}
-{% endif %}
-
-{% if forums.has_next %}
-<a href="?page={{ forums.next_page_number }}" class="next">Next</a>
-{% endif %}
 </body>
 </html>
