Add proper view for current bitcoin prices

--- a/templates/invest/invest.html
+++ b/templates/invest/invest.html
@@ -81,7 +81,9 @@
         <div class="row mt-4">
         <div class="col-lg-6">
         <div class="input-group">
-            TODO: display bitcoin exchange rate somewhere here. Maybe we have a js function that shows how much the user will convert? is this too complicated? too time consuming?
+            TODO: display bitcoin exchange rate somewhere here. Maybe we have a js function that shows how much the user will convert? is this too complicated? too time consuming?<br />
+            Anyway, here is the current rate (1 bitcoin is {{ exchange_rate }} USD)<br />
+            And the user's account info is listed in the right spots<br />
         <input type="text" name="price" id="price" class="form-control" placeholder="Bitcoin Price" disabled value="{{ account.in_game_currency }}">
         <div class="input-group-append">
         <span class="input-group-text" id="inputGroupPrepend">USD</span>
