--- a/templates/game/send_temp.html
+++ b/templates/game/send_temp.html
@@ -2,11 +2,11 @@
 
 Here is a simple form to send scores.<br />
 
-You currently have: {{ money }} <br />
+You currently have: <div id="money" name="money">{{ money }}</div> <br />
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
-<form action="{% url 'invest:send_score' %}" method="POST" id="post-score">
+<form action="{% url 'game:send_score' %}" method="POST" id="post-score">
     {% csrf_token %}
 Enter the score you want to send:
 <input id="score" name="score" type="number" step="0.01" required />
