--- a/templates/bithumb/index.html
+++ b/templates/bithumb/index.html
@@ -112,20 +112,19 @@
     <div class="container mt-5">
         <div class="row">
             <div class="col-lg-12 d-flex justify-content-center align-items-center mb-3">
-                <img src="{% static "img/logo.png" %}" alt="LOGO">
+                <img src="{% static "img/logo.png" %}" alt="LOGO" style ="width:auto; height: 100px;">
             </div>
         </div>
-        <div class="row">
-            <div class="col-sm-6">
-                <h4>Score : </h4>
-            </div>
-            <div class="col-sm-6 text-right">
-                <h4>Bitcoin Rate(CAD) :</h4>
-            </div>
+        <div class="row d-flex justify-content-center align-items-center mb-3">
+            <h5>Score: </h5>
         </div>
+        <div class="row d-flex justify-content-center align-items-center mb-3">
+            <h5>Bitcoin Rate(USD):</h5>
+        </div>
+    </div>
         <div class="row">
-            <div class="col-lg-12">
-                <div class="card mt-3" style="width: 100%; height: 70vh;">
+            <div class="col-lg-12 d-flex justify-content-center align-items-center mb-3">
+                <div class="card mt-3" style="width: 320px; height: 480px;">
                     <div class="card-body p-3">
                         <!-- HTML 5 Canvas Here -->
                     </div>
@@ -133,15 +132,19 @@
             </div>
         </div>
     </div>
-    <!-- Footer -->
-    <div class="footer mt-4 py-4" style="background:#232323; height: 300px; color: #fff;">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-4">
-                        <h3>Random shit juno wants</h3>
-                    </div>
-                </div>
-            </div>
+<!-- Footer -->
+<div class="footer mt-4 py-4" style="background:#dae0e5; height: 200px; color: #000000;">
+    <div class="container">
+        <div class="row">
+            <h3>University of Regina</h3>
         </div>
+        <div class="row">
+            <h5>Computer Science Dept.</h5>
+        </div>
+        <div class="row">
+            <h7> CS476 Group Proj. by C. Myers & J. Shin</h7>
+        </div>
+    </div>
+</div>
 </body>
 </html>
