--- a/templates/forum/forum.html
+++ b/templates/forum/forum.html
@@ -1,6 +1,201 @@
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Bithumb</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+</head>
+<body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" >Bithumb</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'index' %}">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'game:scoreboard' %}">Scoreboard</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'forum:all_forums' %}">Forum</a>
+            </li>
+            <!-- if request.user.is_authenticated -->
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'account:profile' user_id=1 %}">Profile</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'invest:itemshop' %}">Item Shop</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'invest:invest' %}">Invest</a>
+            </li>
+            <!-- endif -->
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'about' %}">About Us</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+                <div class="btn-group">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Signup
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right p-3">
+                        <div class="my-3">
+                            <h3>Sign Up</h3>
+                        </div>
+                        <form action="" style="width: 300px;">
+                            <div class="form-group">
+                                <input type="text" class="form-control" name="username" id="username" placeholder="username">
+                            </div>
+                            <div class="form-group">
+                                <input type="password" class="form-control" name="password" id="password" placeholder="password">
+                            </div>
+                            <div class="form-group">
+                                <input type="password" class="form-control" name="confirm_password" id="confirm_password" placeholder="verify password">
+                            </div>
+                            <div class="form-group">
+                                <button class="btn btn-dark float-right">Sign Up</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Login
+                </a>
+                <div class="dropdown-menu dropdown-menu-right p-3">
+                    <div class="my-3">
+                        <h3>Login</h3>
+                    </div>
+                    <form action="" style="width: 300px;">
+                        <div class="form-group">
+                            <input type="text" class="form-control" name="username" id="username" placeholder="username">
+                        </div>
+                        <div class="form-group">
+                            <input type="password" class="form-control" name="password" id="password" placeholder="password">
+                        </div>
+                        <div class="form-group">
+                            <button class="btn btn-dark float-right">Login</button>
+                        </div>
+                    </form>
+                </div>
+            </li>
+        </ul>
+    </div>
+</nav>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-lg-12 d-flex justify-content-center align-items-center mb-3">
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-12">
+            <table class="table">
+                <thead>
+                <tr>
+                    <td>Title: {{ forum.title }}</td>
+                </tr>
+                <tr>
+                    <td>Posted by: {{ forum.poster }}</td>
+                </tr>
+                <tr>
+                    <td>Describtion</td>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>
+                        {% if forum.description %}
+                        {{ forum.description }}
+                        {% endif %}
+
+                    </td>
+                </tr>
+                </tbody>
+                <thead>
+                <tr>
+                    <td>Posted at: {{ forum.time }}</td>
+                </tr>
+                {% for comment in forum.comment_set_all %}
+                <tr>
+                    <td>{{ comment.text }}</td>
+                    <td>{{ comment.user }}</td>
+                    <td>{{ comment.time }}</td>
+                    TODO: delete button
+                </tr>
+                {% endfor %}
+                <tr>
+                    <td>{Previous Comments}</td>
+                </tr>
+                <tr>
+                    <td>{Previous Comments}</td>
+                </tr>
+                <tr>
+                    <td>
+                    <form action="" style="width: auto;">
+                        <div class="form-group">
+                            <input type="text" class="form-control" name="comments" id="comments" placeholder="comments">
+                        </div>
+                    </form>
+                    </td>
+                    <td><button class="btn btn-primary"><i class="fas fa-reply"></i></button></td>
+                </tr>
+                </thead>
+
+                    <!--<td>
+                        <button class="btn btn-primary"><i class="fas fa-reply"></i></button>
+                        <button class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
+                    </td> -->
+            </table>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-12 text-right">
+            <button class="btn btn-primary">Go Back</button>
+        </div>
+    </div>
+
+</div>
+<!-- Footer -->
+<div class="footer mt-4 py-4" style="padding-bottom: 60px; background:#dae0e5; height: 200px; color: #000000;">
+    <div class="container">
+        <div class="row">
+            <div id="footer">
+                <div class ="span12">
+                    <ul class="footer">
+                        <li> University of Regina </li>
+                        <li> Computer Science Department </li>
+                        <li> CS 476 Group Project</li>
+                        <li> By C. Myers, J. Shin</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</body>
+</html>
+
+<!--
 Here is a specfic forum.<br/ ><br/>
 
-<!-- TODO: maybe use the truncation thing for long titles -->
+<!-- TODO: maybe use the truncation thing for long titles
 title; {{ forum.title }}<br/>
 
 posted by: {{ forum.poster }}<br/>
@@ -40,3 +235,4 @@ And here is a form for new comments:<br /><br />
 <button type="submit">Post</button>
 </form>
 {% endif %}
+-->
