--- a/templates/invest/itemshop.html
+++ b/templates/invest/itemshop.html
@@ -30,28 +30,70 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'forum:all_forums' %}">Forum</a>
             </li>
+            <!-- if request.user.is_authenticated -->
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'account:profile' user_id=1 %}">Profile</a>
+            </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'invest:itemshop' %}">Item Shop</a>
             </li>
-            {% if request.user.is_authenticated %}
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'invest:invest' %}">Invest</a>
             </li>
-            {% endif %}
+            <!-- endif -->
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'about' %}">About Us</a>
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-        {% if request.user.is_authenticated %}
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'account:myprofile' %}">Profile</a>
+            <li class="nav-item active">
+                <div class="btn-group">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Signup
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right p-3">
+                        <div class="my-3">
+                            <h3>Sign Up</h3>
+                        </div>
+                        <form action="" style="width: 300px;">
+                            <div class="form-group">
+                                <input type="text" class="form-control" name="username" id="username" placeholder="username">
+                            </div>
+                            <div class="form-group">
+                                <input type="password" class="form-control" name="password" id="password" placeholder="password">
+                            </div>
+                            <div class="form-group">
+                                <input type="password" class="form-control" name="confirm_password" id="confirm_password" placeholder="verify password">
+                            </div>
+                            <div class="form-group">
+                                <button class="btn btn-dark float-right">Sign Up</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'account:logout' %}">Log out</a>
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Login
+                </a>
+                <div class="dropdown-menu dropdown-menu-right p-3">
+                    <div class="my-3">
+                        <h3>Login</h3>
+                    </div>
+                    <form action="" style="width: 300px;">
+                        <div class="form-group">
+                            <input type="text" class="form-control" name="username" id="username" placeholder="username">
+                        </div>
+                        <div class="form-group">
+                            <input type="password" class="form-control" name="password" id="password" placeholder="password">
+                        </div>
+                        <div class="form-group">
+                            <button class="btn btn-dark float-right">Login</button>
+                        </div>
+                    </form>
+                </div>
             </li>
-        {% endif %}
-    </ul>
+        </ul>
     </div>
 </nav>
 <div class="container mt-5">
@@ -67,11 +109,7 @@
                     <div class="col-lg-3">
                         <div class="card" style="width: 100%; height: 100%;">
                             <div class="card-body p-3">
-                                <div class="buy-check float-right">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" id="gridCheck1">
-                                    </div>
-                                </div>
+                                <button class="btn btn-dark float-right mt-3">Buy</button>
                                 <!-- HTML 5 Canvas Here -->
                                 Juno Shin
                             </div>
@@ -80,11 +118,7 @@
                     <div class="col-lg-3">
                         <div class="card" style="width: 100%; height: 100%;">
                             <div class="card-body p-3">
-                                <div class="buy-check float-right">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" id="gridCheck1">
-                                    </div>
-                                </div>
+                                <button class="btn btn-dark float-right mt-3">Buy</button>
                                 <!-- HTML 5 Canvas Here -->
                                 Juno Shin
                             </div>
@@ -93,11 +127,7 @@
                     <div class="col-lg-3">
                         <div class="card" style="width: 100%; height: 100%;">
                             <div class="card-body p-3">
-                                <div class="buy-check float-right">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" id="gridCheck1">
-                                    </div>
-                                </div>
+                                <button class="btn btn-dark float-right mt-3">Buy</button>
                                 <!-- HTML 5 Canvas Here -->
                                 Juno Shin
                             </div>
@@ -106,11 +136,7 @@
                     <div class="col-lg-3">
                         <div class="card" style="width: 100%; height: 100%;">
                             <div class="card-body p-3">
-                                <div class="buy-check float-right">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" id="gridCheck1">
-                                    </div>
-                                </div>
+                                <button class="btn btn-dark float-right mt-3">Buy</button>
                                 <!-- HTML 5 Canvas Here -->
                                 Juno Shin
                             </div>
@@ -118,7 +144,6 @@
                     </div>
                 </div>
             </div>
-            <button class="btn btn-dark float-right mt-3">Buy</button>
         </div>
     </div>
 
