--- a/templates/invest/invest.html
+++ b/templates/invest/invest.html
@@ -78,12 +78,13 @@
             </div>
         </div>
         <form action="">
-            <div class="row mt-4">
+            <div class="row">
+            <div class="col-lg-6">
                 <h3>User's Account</h3>
-            </div>
+
             <div class="row mt-4" style="width:300px">
                 <div class="input-group">
-                    <!--TODO: display bitcoin exchange rate somewhere here. Maybe we have a js function that shows how much the user will convert? is this too complicated? too time consuming? -->
+
                     <input type="text" name="price" id="price" class="form-control" placeholder="Bitcoin Price" disabled value="{{ account.in_game_currency }}">
                     <div class="input-group-append">
                         <span class="input-group-text" id="inputGroupPrepend">USD</span>
@@ -99,6 +100,22 @@
                     </div>
                 </div>
             </div>
+            </div>
+
+            <div class="col-lg-6">
+                <h3>Bitcoin Exchange rate</h3>
+
+                <div class="row mt-4" style="width:300px">
+                    <div class="input-group">
+
+                        <input type="text" name="rate" id="rate" class="form-control" placeholder="Exchange Rate" disabled value="{{ exchange_rate }}">
+                        <div class="input-group-append">
+                            <span class="input-group-text" id="inputGroupPrepend">USD</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 &nbsp
 &nbsp
             <div class="row">
@@ -111,7 +128,7 @@
                                 <input type="radio" name="pay" onchange="changePay(this)" data-type="scores" aria-label="Radio button for following text input">
                             </div>
                         </div>
-                    <form method="POST" action="{% url 'invest:exchange_in_game' rate=1.00 %}">
+                    <form method="POST" action="{% url 'invest:exchange_in_game' %}">
                         {% csrf_token %}
                         {{ in_game_currency_form.non_field_errors }}
                         {% for field in in_game_currency_form %}
@@ -124,7 +141,7 @@
                     </div>
                     <h5 id="convertPTS">Converted amount: </h5>
                     <div class="col-lg-6">
-                        <button class="btn btn-dark">BUY</button>
+                        <button type="submit" class="btn btn-dark">BUY</button>
                     </div>
                 </form>
                 </div>
@@ -137,15 +154,22 @@
                                 <input type="radio" name="pay" onchange="changePay(this)" data-type="bitcoins" aria-label="Radio button for following text input">
                             </div>
                         </div>
-                        <input type="text" name="price" id="bitcoins" class="form-control" onkeyup = "coinTOpts(this)" disabled placeholder="Amount of Bitcoins to spend">
-                        <div class="input-group-append">
-                            <span class="input-group-text" id="inputGroupPrepend">Bitcoins</span>
-                        </div>
+                        <form method="POST" action="{% url 'invest:exchange_bitcoin' rate=1.00 %}">
+                            {% csrf_token %}
+                            {{ bitcoin_form.non_field_errors }}
+                            {% for field in bitcoin_form %}
+                            {{ field.errors }}
+                            {{ field }}
+                            <div class="input-group-append">
+                                <span class="input-group-text" id="inputGroupPrepend">Bitcoins</span>
+                            </div>
+                            {% endfor %}
                     </div>
                     <h5 id="convertCoin">Converted amount: </h5>
                     <div class="col-lg-6">
-                        <button class="btn btn-dark">SELL</button>
+                        <button type="submit" class="btn btn-dark">SELL</button>
                     </div>
+                </form>
                 </div>
             </div>
 
@@ -180,29 +204,29 @@
     }
 
     function ptsTOcoin(e){
-        var PTSrate = 0.00001;
+        var PTSrate = parseFloat(document.getElementById("rate").value);
         var pts = parseFloat(document.getElementById("scores").value);
         var amount = 0;
 
         if (pts > 0)
         {
-            amount = pts * PTSrate;
+            amount = pts / PTSrate;
         }
 
-        convertPTS.innerText = "Converted Amount: " + Number((amount).toFixed(8)) + " Bitcoins";
+        convertPTS.innerText = "Converted Amount: " + amount.toFixed(8) + " Bitcoins";
     }
 
     function coinTOpts(e){
-        var COINrate = 10000;
+        var COINrate = parseFloat(document.getElementById("rate").value);
         var coins =  parseFloat(document.getElementById("bitcoins").value);
         var amount = 0;
 
-        if (pts > 0)
+        if (coins > 0)
         {
             amount = coins * COINrate;
         }
 
-        convertPTS.innerText = "Converted Amount: " + Number((amount).toFixed(2)) + " USD";
+        convertCoin.innerText = "Converted Amount: " + amount.toFixed(2) + " USD";
     }
     </script>
 </html>
