--- a/templates/game/index.html
+++ b/templates/game/index.html
@@ -17,6 +17,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
+    <script href = "{% static 'js/send_score.js' %}"></script>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Bithumb</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,6 +59,7 @@
         <div class="row">
             <div class="col-lg-12 d-flex justify-content-center align-items-center mb-3">
                 <iframe src ="{% url 'game:game' %}" style="width: 320px; height:480px"></iframe>
+                {% csrf_token %}
             </div>
         </div>
     </div>
